# archie

./: .dockerignore  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  docker-compose.yml
src/: endpoints.rs  lib.rs
src/cli/: actions.rs  config.rs  log_formatter.rs  main.rs  util.rs
src/coordinator/: aur.rs  config.rs  logs.rs  main.rs  messages.rs  orchestrator.rs  query_package.rs  repository.rs  scheduler.rs  state.rs  stop_token.rs  web_server.rs
src/worker/: main.rs
