[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/cli/main.rs"
name = "archie"

[[bin]]
path = "src/worker/main.rs"
name = "worker"

[[bin]]
path = "src/coordinator/main.rs"
name = "coordinator"

[dependencies]
bollard = { version = "0.18.1" }
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "fs", "process"] }
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting"] }
tower-http = { version = "0.6.2" , features = ["fs"]}
figment = { version = "0.10.19", features = ["env", "toml"] }
home = "0.5.9"
toml = "0.8.19"
ureq = { version = "2", features = ["json"] }
colored = "2.1.0"
tempfile = "3.14.0"
